Fixed dropdown placement on mobile screens

--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 100px;
-    font-family: 'Inter';
+    font-family: 'InterVariable';
     font-weight: 400;
     font-size: 18px; 
     color: var(--textFaded);
@@ -419,5 +419,17 @@ a:hover {
     .dropdown {
         left: 0px !important;
         top: 186px !important;
+    }
+}
+
+@media only screen and (max-width: 485px) {
+    .dropdown {
+        top: 244px !important;
+    }
+}
+
+@media only screen and (max-width: 327px) {
+    .dropdown {
+        top: 302px !important;
     }
 }
